[package]
name = "bbox3d-estimator"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.30.1"
anyhow = "1.0.58"
common-types = { version = "0.1.0", path = "../common-types" }
serde = { version = "1.0.140", features = ["derive"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
unzip-n = "0.1.2"
geo = "0.22.1"
