[package]
name = "bbox3d-estimator"
version = "0.1.0"
edition = "2021"

license-file = "LICENSE.en.txt"
description = "This library can estimate a 3D bounding box given a set of 3D points by Rotating Caliper algorithm"
repository = "https://github.com/NEWSLabNTU/bbox3d-estimator.git"

[dependencies]
nalgebra = "0.32.2"
noisy_float = { version = "0.2.0", features = ["serde"] }
geo = "0.24.1"
itertools = "0.10.5"
